--- a/src/sass/partials/_site-header.scss
+++ b/src/sass/partials/_site-header.scss
@@ -52,6 +52,7 @@ header[role="banner"] {
     .logo,
     .show-hide-mobile-menu {
       height: 2.5rem;
+      z-index: 5; // Show even when mobile popup menu open
 
       // Set a default branded fill colour for icons
       svg {
@@ -75,7 +76,6 @@ header[role="banner"] {
       flex-direction: column;
       justify-content: center;
       margin-right: 2rem;
-      z-index: 2; // Show even when mobile popup menu open
 
       svg {
         height: 1.25rem;
@@ -84,8 +84,6 @@ header[role="banner"] {
     }
 
     .show-hide-mobile-menu {
-      z-index: 2;
-
       .menu-button {
         cursor: pointer;
         height: 2.5rem;
@@ -202,7 +200,7 @@ header[role="banner"] {
         width: 100%;
         padding: 5rem $space-page-padding-x-dynamic 3rem;
         position: fixed;
-        z-index: 1;
+        z-index: 4;
         left: 0;
         top: 0;
         background-color: $off-white-300;
